    - Hotfix: 1.2.2: (2020/05/11)
        - remove -i from docker command in create_tank_from_ot_lat_lon_radius.sh. Issue #11
        - Set EW_SVN_REVISION = 8145.
    - Hotfix: 1.2.3: (2020/05/20)
        - Add option --user to docker command in create_tank_from_ot_lat_lon_radius.sh. Issue #12
    - Hotfix: 1.2.4: minor fix for previous 1.2.3. Issue #12 (2020/05/20)

* Release 1.1.2 (2020/04/09)
    - Copy files in a Earthworm Environment by running or executing a Docker Container.
      Example: 'make EW_ENV=ew_env_test1 cp  SRC_PATH=... DEST_PATH=...'
    - Extend README.md
    - Hotfix: 1.1.1: improve 'make ew_run_bash' and 'make ew_exec_bash'.  (2020/04/10)
    - Hotfix: 1.1.2: Add example for creating Earthworm Environment from git repository.  (2020/04/10)

* Release 1.0.4 (2020/04/07)
    - First public release.
    - Hotfix: 1.0.1: update HISTORY.
    - Hotfix: 1.0.2: update README.md about Earthworm Environment directory mount.
    - Hotfix: 1.0.3: set Docker Namespace for 'docker push'. (2020/04/08).
    - Hotfix: 1.0.4: fix variables for Docker name and version. (2020/04/08).

* Release 0.20.2 (2020/04/07)
    - Mount whole Earthworm Environment directory on Docker Container,
      instead of single subdirectory params, log, data.
    - Add file HISTORY.
    - Hotfix: 0.20.1: minor fix.
    - Hotfix: 0.20.2: minor fix.

* Release 0.19.3 (2020/04/06)
    - Improve documentation in file README.md
    - Hotfix: 0.19.3: fix README.md.

* Release 0.18.0 (2020/04/06)
    - Add GNU General Public License. COPYING and notices in source files.

* Release 0.17.0 (2020/04/04)
    - Redefine Default Docker Container Name based on variables
      DOCKER_IMAGE_NAME, DOCKER_IMAGE_VERSION and EW_ENV
    - Tool prevents launching multiple Earthworm Docker Sandbox
      Containers on the same Earthworm Environment.

* Release 0.16.0 (2020/04/03)
    - Add rule 'check_for_executing'.

* Release 0.15.1 (2020/04/01)