@@ -23,7 +23,7 @@
 include Makefile.env
 
 # Current version of this tool
-EDS_VERSION=1.2.4
+EDS_VERSION=1.2.5
 
 ###########################################################
 # Do not edit this file but set variables in Makefile.env
