@@ -2,7 +2,7 @@
 
 A Docker tool for learning, testing, running and developing Earthworm System within single or multiple enclosed environments.
 
-Earthworm Docker Sandbox 1.2.4 Copyright (C) 2020  Matteo Quintiliani
+Earthworm Docker Sandbox 1.2.5 Copyright (C) 2020  Matteo Quintiliani
 
 Available at: [https://github.com/matteoquintiliani/earthworm-docker-sandbox](https://github.com/matteoquintiliani/earthworm-docker-sandbox)
 
@@ -621,7 +621,7 @@ $ make EW_ENV=ew_test1 ew_tail_all_logs
 
 ```
 ===========================================================================
-Earthworm Docker Sandbox 1.2.4 Copyright (C) 2020  Matteo Quintiliani
+Earthworm Docker Sandbox 1.2.5 Copyright (C) 2020  Matteo Quintiliani
 ===========================================================================
 
 Syntax: make  [ EW_ENV=<ew_env_subdir_name> ]  <command>
