@@ -1,4 +1,4 @@
-Earthworm Docker Sandbox 1.2.4 Copyright (C) 2020  Matteo Quintiliani
+Earthworm Docker Sandbox 1.2.5 Copyright (C) 2020  Matteo Quintiliani
 
 Available at: [https://github.com/matteoquintiliani/earthworm-docker-sandbox](https://github.com/matteoquintiliani/earthworm-docker-sandbox)
 
