@@ -40,6 +40,7 @@ Release History
     - Hotfix: 1.2.3: (2020/05/20)
         - Add option --user to docker command in create_tank_from_ot_lat_lon_radius.sh. Issue #12
     - Hotfix: 1.2.4: minor fix for previous 1.2.3. Issue #12 (2020/05/20)
+    - Hotfix: 1.2.5: minor fix for previous 1.2.4 and fix help in create_tank_from_ot_lat_lon_radius.sh.. Issue #10, #11 and #12 (2020/05/20)
 
 * Release 1.1.2 (2020/04/09)
     - Copy files in a Earthworm Environment by running or executing a Docker Container.
